[package]
name = "rusticnes-wasm"
version = "0.1.0"
authors = ["Nicholas Flynt <thegamefreak0134@gmail.com>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
wasm-bindgen = "0.2.69"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "e6a8503542d0fe2251021da740d86a71d9d606e6"  }
rusticnes-ui-common = { git = "https://github.com/zeta0134/rusticnes-ui-common", rev="11597811808bf5e3222ca0b4567162f6ad5eebad" }

