[package]
name = "rusticnes-wasm"
version = "0.1.0"
authors = ["Nicholas Flynt <thegamefreak0134@gmail.com>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
wasm-bindgen = "0.2.69"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "e1cf6698596165f1ff0a90b249b6d8a90efa5821"  }
rusticnes-ui-common = { git = "https://github.com/zeta0134/rusticnes-ui-common", rev="eecfd7c3793c244e7a3f394f9efa7f263dd74508" }

