[package]
name = "rusticnes-wasm"
version = "0.1.0"
authors = ["Nicholas Flynt <zeta0134@reploid.cafe>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
wasm-bindgen = "0.2.92"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "be6ef2c7cd3d654846e67888aa3091aa8d310a0a"  }
rusticnes-ui-common = { git = "https://github.com/zeta0134/rusticnes-ui-common", rev="88f533743d55fabe860e6a91c9b18a309d5e3cac" }

